--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,6 @@
 # main links links
 main:
-  - title: "Projects"
-    url: /projects/
+
 
 #   - title: "Talks"
 #     url: /talks/    
@@ -9,8 +8,8 @@ main:
 #   - title: "Teaching"
 #     url: /teaching/    
     
-#   - title: "Portfolio"
-#     url: /portfolio/
+  - title: "Projects"
+    url: /portfolio/
         
 #   - title: "Blog Posts"
 #     url: /year-archive/
