--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "E-Sidebar"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "MSc Statistics, BSc Mathematics"
   location         : "Toronto, Canada"
   employer         :
