--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Emad Zadegan"
 title_separator          : "-"
-name                     : &name "Emad Zadegan"
+name                     : &name "emadzadegan.github.io"
 description              : &description "Graduate student in Statistics"
 url                      : https://emadzadegan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
