--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Emad Zadegan"
+title                    : "emadzadegan.github.io 222"
 title_separator          : "-"
 name                     : &name "emadzadegan.github.io"
 description              : &description "Graduate student in Statistics"
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "E-Sidebar"
+  name             : "Emad Zadegan"
   avatar           : "profile.png"
-  bio              : "MSc Statistics, BSc Mathematics"
+  bio              : "MSc Statistics, \n BSc Mathematics"
   location         : "Toronto, Canada"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
