--- a/_config.yml
+++ b/_config.yml
@@ -96,11 +96,11 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "cyrusmaz"
+  github           : #"cyrusmaz"
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : 
   lastfm           :
   linkedin         : # https://www.linkedin.com/in/emad-zadegan-a6680618a/
   orcid            : 
