--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : #"cyrusmaz"
+  github           : "cyrusmaz"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : # https://www.linkedin.com/in/emad-zadegan-a6680618a/
+  linkedin         : https://www.linkedin.com/in/cyrus-maz-a6680618a/
   orcid            : 
   pinterest        :
   soundcloud       :
