--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/cyrus-maz-a6680618a/"
+  linkedin         : "cyrus-maz-a6680618a"
   orcid            : 
   pinterest        :
   soundcloud       :
