--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Projects"
     url: /portfolio/
         
-#   - title: "Blog Posts"
-#     url: /year-archive/
+  - title: "Blog"
+    url: /blog/
     
   - title: "CV"
     url: /cv/
