--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Projects"
     url: /portfolio/
         
-  - title: "Blog"
-    url: /blog/
+#   - title: "Blog"
+#     url: /blog/
     
   - title: "CV"
     url: /cv/
