--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Cyrus Maz"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Statistics, Mathematics, Machine Learning"
   location         : "Toronto, Canada"
   employer         :
